# c2cfo_calc

./: CMakeLists.txt  contract_widget.cpp  contract_widget.hpp  main.cpp  market_widget.cpp  market_widget.hpp  name_widget.cpp  name_widget.hpp  player_widget.cpp  player_widget.hpp  salary_widget.cpp  salary_widget.hpp  window.cpp  window.hpp  year_widget.cpp  year_widget.hpp
